--- a/gui/public/style.css
+++ b/gui/public/style.css
@@ -4,6 +4,14 @@
   border-color: #393;
 }
 
+.card {
+  /* 
+   * Ensure that its height is the same as 
+   * the sum of the heights of each element it contains.
+   */
+  height: 100% !important;
+}
+
 /* Box Farm. */
 p.a{
   font-family: 'Space Mono', monospace;
@@ -49,7 +57,10 @@ padding: 10px;
   color: #999;
 }
 
-/* Default. */
+/* 
+ * Applies margins around the control sections to center it.
+ * Same size breakpoints as Bootstrap.
+ */
 .content-spacing {
   margin-left: 0px;
   margin-right: 0px;
@@ -82,6 +93,29 @@ padding: 10px;
   }
 }
 
+/*
+ * Indicates each control section with a gradient.
+ */
+.control-section {
+  border-radius: 20px;
+  margin-bottom: 16px;
+  padding: 16px;
+  
+  background-image: linear-gradient( to right, #fff, #eee );
+}
+
+/*
+ * Container for each set of controls.
+ */
+.control-container {
+  border-radius: 20px;
+  margin-top: 8px;
+  padding: 8px;
+  
+  border: #ccc 2px solid; 
+  background-color: #fff;
+}
+ 
 .data{
   font-family: 'Encode Sans Semi Expanded', sans-serif;
   color: #339933;
