Box Farm GUI v0.5.4
Settings: Pump cycle time inputs with support for multiple cycles.

Changes:
+ Version incremented from 0.5.3 to 0.5.4: data_types, settings, style, ui_logic.

Added:
+ InputTimeDropdown: Methods to enable or disable a dropdown.

Removed:

Issues:
+ Changes in style.css probably broke the layout in index.html (the logo
left-shift).

--- a/gui/public/style.css
+++ b/gui/public/style.css
@@ -1,3 +1,9 @@
+/*
+ * Box Farm GUI
+ * Version 0.5.4
+ * Author: Control Subsystem
+ */
+
 /* Bootstrap overrides. */
 .btn-primary {
   background-color: #393;
