Box Farm GUI v0.5.7 - Plant Imaging Gallery
Changes:
+ Value changes.

Added:

Removed:

Issues:
+ imaging.html: Split thumbnail loading by date in a separate page to avoid
  loading potentially thousands of images in one page.
+ webserver.js: Plant image labels do not line up with its filenames if
  the plant images do not come in pairs (RGB/NIR).
+ Progress bar: Current percentages are not being
  recalculated when needed.

--- a/gui/views/templates/imaging.ejs
+++ b/gui/views/templates/imaging.ejs
@@ -51,7 +51,7 @@
                         <img class="img-fluid" src="<%= filesLs.rgb[ i ] %>">
                       </a>
                       <div class="content">
-                        Pot <%= filesLs.pot[ i ] %> (RGB).
+                        Pot <%= filesLs.pot[ i ] %> (RGB)
                       </div>
                     </div>
                   </div>
@@ -61,7 +61,7 @@
                         <img class="img-fluid" src="<%= filesLs.nir[ i ] %>">
                       </a>
                       <div class="content">
-                        Pot <%= filesLs.pot[ i ] %> (NIR).
+                        Pot <%= filesLs.pot[ i ] %> (NIR)
                       </div>
                     </div>
                   </div>
